# rust-performance-timing

./: Cargo.toml  README.md
benches/: criterion_cycle_bench.rs
src/: lib.rs
